scripts/nullaway/wpi/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8.txt
../wpi/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:105: error: [NullAway] dereferenced expression parking.getPlacePool() is @Nullable
        place = parking.getPlacePool().getParkingPlace(getMaxWaitTimeMillis());
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:112: error: [NullAway] dereferenced expression place is @Nullable
        place.using(getParkTimeMillis());
             ^
    (see http://t.uber.com/nullaway )
../wpi/urlaf0069908d_AlexanderAndreev_Parking_tgz-pJ8-com_andreev_parking_controller_RunnerJ8/src/com/andreev/parking/model/Car.java:117: error: [NullAway] dereferenced expression parking.getPlacePool() is @Nullable
        parking.getPlacePool().returnParkingPlace(place);
                              ^
    (see http://t.uber.com/nullaway )
3 errors
